tests/suite/snapshots/suite__check__tests__check__bad_equality_array_depth.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_equality_array_depth.xi:4:20]
   │
 4 │     c: bool = a == b
   ·                    ┬  
   ·                    ╰── Expected int[][] but found int[][][][]
───╯

